CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Vector)

### SETUP C COMPILER ###
SET(CMAKE_C_FLAGS "-std=c99")
SET(CMAKE_C_COMPILER gcc)

INCLUDE_DIRECTORIES(
	${Vector_SOURCE_DIR}/include
	${Vector_SOURCE_DIR}/build/libs
	${Vector_SOURCE_DIR}/src
	${Vector_SOURCE_DIR}/application
)

### SET OUTPUT DIRECTORIES ###
SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(OUTPUT_LIBSDIR ${PROJECT_BINARY_DIR}/libs)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
MAKE_DIRECTORY(${OUTPUT_BINDIR})
MAKE_DIRECTORY(${OUTPUT_LIBSDIR})

### RECURSIVE ###
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(doc)