### SETUP LIBRARY ###
SET(LIB_NAME vectorDll)
SET(HEADER_PATH ${Vector_SOURCE_DIR}/include/${LIB_NAME})
SET(TARGET_H
    ${HEADER_PATH}/vector_dll.h
)
SET(TARGET_SRC
    vector_dll.c
)
SET(TARGET_ADDED_LIBRARIES
)
### REGISTER ###
ADD_LIBRARY(${LIB_NAME} ${TARGET_SRC} ${TARGET_H})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${TARGET_ADDED_LIBRARIES})
