### SETUP LIBRARY ###
SET(LIB_NAME vectorSteps)
SET(HEADER_PATH ${Vector_SOURCE_DIR}/include/${LIB_NAME})
SET(TARGET_H
    ${HEADER_PATH}/read_steps.h
)
SET(TARGET_SRC
    read_steps.c
)
SET(TARGET_ADDED_LIBRARIES
	vectorMap
)
### REGISTER ###
ADD_LIBRARY(${LIB_NAME} ${TARGET_SRC} ${TARGET_H})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${TARGET_ADDED_LIBRARIES})
